syntax = "proto3";

package org;

option go_package = "genproto/org";

message InitOrgRequest {
  	string id = 1;
	string eid = 2;
	string domain = 3;
	string orgName = 4;
	string adminEmailId = 5;
	string adminPhoneNumber = 6;
	string adminName = 7;
	string department = 8;
	string designation = 9;
	bool emailVerified = 10;
	string password = 11;
	string role = 12;
	bool firstLoginPending = 13;
	string status = 14;
	bool useGoogleOAuth = 15;
	string country = 16;
}

message InitOrgResponse {
  	bool isError = 1;
  	string message = 2;
}